fix layout uneven

--- a/css/loginPopUp.css
+++ b/css/loginPopUp.css
@@ -244,3 +244,7 @@ button:focus{
     width: 100%;
     height: 100vh;
   }
+
+  .test{
+    font-size: 14px;
+  }
